# av1decoder1

av1decoder/: AI图像编解码应用综述.md  AV1编码并行.drawio  CMakeLists.txt  DAV1D 并行机制分析.md  H264_H265_AV1.md  Streaming_media _protocol.md  algo.txt  arm_register.md  av1_algo.txt  c++.md  cmake.md  dav1d_sorcecode_analysis.txt  debug_tools.md  dma.md  driver.md  fb_drm.md  ffmpeg如何接入自己开发的解码器.md  ffmpeg播放器的一些经验.md  gitgerrit.docx  interview.txt  linux_kernel.md  linux子系统.md  neon_learning.md  neon_learning.txt  objdump_readelf_nm.txt  opecv.md  opencv.md  openmax_il.md  qml经验.md  qt数据库.md  readme.md  rk_mpp.md  总线协议.md  设备树.md  驱动调试问题_面试经验.md
av1decoder/X264/: X264.md  x264 MB-tree实现细节 - 十方云山 - 博客园 (2025_1_7 16_14_12).html  x264 lookahead阶段详解 - 十方云山 - 博客园 (2025_1_7 14_49_15).html
av1decoder/X265/: x265-1.8版本-common_contexts.h注释-CSDN博客 (2024_12_31 23_24_31).html  x265-1.8版本-common_cudata.cpp注释_getdirectpmv-CSDN博客 (2024_12_31 23_24_20).html  x265-1.8版本-common_cudata.h注释_x265 zigzag-CSDN博客 (2024_12_31 23_09_16).html  x265-1.8版本-common_dct.cpp注释_costcoeffnxn-CSDN博客 (2024_12_31 23_18_31).html  x265-1.8版本-common_framedata.cpp注释_x265 framedata-CSDN博客 (2024_12_31 23_18_14).html  x265-1.8版本-common_framedata.h注释_x265中frame.h注释-CSDN博客 (2024_12_31 23_18_00).html  x265-1.8版本-common_intrapred.cpp注释-CSDN博客 (2024_12_31 23_17_45).html  x265-1.8版本-common_ipfilter.cpp注释-CSDN博客 (2024_12_31 23_17_23).html  x265-1.8版本-common_lowres.cpp注释_luma stride-CSDN博客 (2024_12_31 23_17_06).html  x265-1.8版本-common_lowres.h注释_calcmotionadaptivequantframe-CSDN博客 (2024_12_31 23_16_29).html  x265-1.8版本-common_piclist.cpp注释-CSDN博客 (2024_12_31 23_16_13).html  x265-1.8版本-common_piclist.h注释-CSDN博客 (2024_12_31 23_15_24).html  x265-1.8版本-common_picyuv.h注释_x265中yuv和picyuv两个class的区别-CSDN博客 (2024_12_31 23_15_05).html  x265-1.8版本-common_pixel.cpp注释_x265中pixel-util.s的c语言版本-CSDN博客 (2024_12_31 23_14_43).html  x265-1.8版本-common_predict.h注释_x265 allocbuffers-CSDN博客 (2024_12_31 23_14_22).html  x265-1.8版本-common_scalinglist.cpp注释_scalinglist参数flat和default-CSDN博客 (2024_12_31 23_13_52).html  x265-1.8版本-common_scalinglist.h注释_scaling list-CSDN博客 (2024_12_31 23_13_33).html  x265-1.8版本-common_slice.cpp注释_num4x4partitions-CSDN博客 (2024_12_31 23_12_49).html  x265-1.8版本-common_slice.h注释_main still picture-CSDN博客 (2024_12_31 23_12_35).html  x265-1.8版本-common_threading.h注释-CSDN博客 (2024_12_31 23_09_46).html  x265-1.8版本-common_threadpool.h注释_x265 slicetypedecide-CSDN博客 (2024_12_31 23_18_46).html  x265-1.8版本-common_wavefront.cpp注释_processrowencoder-CSDN博客 (2024_12_31 23_19_00).html  x265-1.8版本-common_wavefront.h注释_processrowencoder解释-CSDN博客 (2024_12_31 23_24_01).html  x265-1.8版本-common_yuv.h注释_x265中chromashift的含义-CSDN博客 (2024_12_31 23_23_43).html  x265-1.8版本-encoder_bitcost.cpp注释_x265 计算mvd bit cost-CSDN博客 (2024_12_31 23_23_25).html  x265-1.8版本-encoder_bitcost.h注释_mv带来的bitcost计算-CSDN博客 (2024_12_31 23_23_08).html  x265-1.8版本-encoder_dpb.cpp注释_x265 decodingrefreshmarking-CSDN博客 (2024_12_31 23_22_42).html  x265-1.8版本-encoder_dpb.h注释_x265 prepareencode-CSDN博客 (2024_12_31 23_22_25).html  x265-1.8版本-encoder_frameencoder.cpp注释_x265 weightanalyse-CSDN博客 (2024_12_31 23_22_10).html  x265-1.8版本-encoder_frameencoder.h注释_chenm003-CSDN博客 (2024_12_31 23_21_34).html  x265-1.8版本-encoder_level.cpp注释_level注释-CSDN博客 (2024_12_31 23_21_18).html  x265-1.8版本-encoder_motion.cpp注释_motionestimate函数-CSDN博客 (2024_12_31 23_21_02).html  x265-1.8版本-encoder_motion.h注释_x265 setsourcepu-CSDN博客 (2024_12_31 23_20_45).html  x265-1.8版本-encoder_ratecontrol.cpp注释_x265 ratecontrol-CSDN博客 (2024_12_31 23_20_31).html  x265-1.8版本-encoder_ratecontrol.h注释_initframepredictors-CSDN博客 (2024_12_31 23_20_11).html  x265-1.8版本-encoder_slicetype.cpp注释_x265 acenergyvar-CSDN博客 (2024_12_31 23_19_54).html  x265-1.8版本-encoder_slicetype.h注释_estimateframecost-CSDN博客 (2024_12_31 23_19_28).html  x265-1.8版本-encoder_weightPrediction.cpp注释_x265 weightanalyse-CSDN博客 (2024_12_31 23_19_16).html  x265-1.8版本-x265.h代码注释-CSDN博客 (2024_12_31 23_24_52).html  x265.md
av1decoder/asm/: itx.S  itx16x16.S  itx48.S  itx4x4.S  itx8x8.S  loopfilter.S
av1decoder/container/: RTSP RTP RTCP.md.txt  TS.xmind  rtp&rtcp.docx  yuv大全.docx
av1decoder/include/: av1decoder.h  bitstream.h  cdf.h  common.h  decode.h  frame.h  header_common.h  mempool.h  obu.h  passert.h  segmentation.h
av1decoder/openmax/libomxil-bellagio-0.9.3.tar/: libomxil-bellagio-0.9.3.tar  mermaid-config.json  mermaid.css  内容管道.mmd  分层结构.mmd  加载器发现.mmd  基础缓冲流程.mmd  架构.md  架构图.md  测试图.mmd  生命周期.mmd  资源管理器.mmd  静态加载器创建.mmd
av1decoder/openmax/libomxil-bellagio-0.9.3.tar/libomxil-bellagio-0.9.3/src/base/: omx_base_component.c  omx_base_port.c
av1decoder/src/: av1decoder.cpp  cdf.cpp  decode.cpp  frame.cpp  mempool.cpp  obu.cpp  segmentation.cpp
av1decoder/svt-av1-docs/Docs/: Parameters.md
dav1d-master/dav1d/include/dav1d/: common.h
dav1d-master/dav1d/src/: decode.c  internal.h  itx_1d.c  itx_tmpl.c  msac.c  msac.h  obu.c  recon.h  recon_tmpl.c  refmvs.c
dav1d-master/dav1d/src/arm/: asm.S
dav1d-master/dav1d/tools/: meson.build
(+4 files in other folders)
